# fastapi_api_financeira

./: .gitignore  alembic.ini  pyproject.toml  test_db.sqlite3
app/: main.py
app/core/: config.py  database.py  init_db.py  security.py
app/models/: base.py  user.py
app/routers/: auth.py
app/routers/auth/: login.py  me.py  register.py
app/schemas/: auth.py  user.py
app/services/: user_service.py
migrations/: env.py
migrations/versions/: 061bc0a94027_criação_tabela_users.py
tests/: conftest.py  test_auth_login.py  test_auth_me.py  test_auth_register.py  test_health.py
